# sounds-fishy

./: README.md
client/: .prettierrc  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
client/src/: App.tsx  index.css
client/src/features/app/: AppLayout.tsx  AppPage.tsx  Chatbox.tsx  ConnectForm.tsx  types.ts  useGameRoom.tsx
client/src/hooks/: useSocket.ts
server/: .env  Cargo.toml  client.go  go.mod  main.go  models.go  role.go  room.go  routes.go
server/.cargo/: config.toml
server/db/: temp.go
server/helper/: array.go
server/main/: client.go  cors.go  role.go  room.go  routes.go
server/src/: main.rs
server/src/server/: config.rs  game_server.rs  mod.rs
server/src/server/models/: app.rs  mod.rs  player.rs  room.rs
server/src/server/models/messages/: client_message.rs  server_message.rs
server/src/server/routes/: mod.rs  room_routes.rs
server/src/server/services/: game_service.rs  mod.rs  room_service.rs
web/: '  .cta.json  eslint.config.js  package.json  pnpm-lock.yaml
web/src/: main.tsx  routeTree.gen.ts
web/src/lib/: constants.ts  env.ts
web/src/lib/game/: constants.ts  hooks.ts  index.ts
web/src/lib/game/context/: provider.tsx
web/src/lib/game/types/clients/: messages.ts
web/src/lib/game/types/servers/: index.ts  messages.ts  player.ts  room_state.ts
web/src/routes/: __root.tsx
web/src/routes/app/: index.tsx
